--- a/admin/formDepartment.html
+++ b/admin/formDepartment.html
@@ -28,6 +28,7 @@
 		<script type="text/javascript" src="../assets/js/jquery-ui-1.10.0.custom.min.js"></script>
 		<script type="text/javascript" src="../assets/js/bootstrap.min.js"></script>	
 		<script type="text/javascript" src="../assets/js/syncard.js"></script>	
+		<script type="text/javascript" src="../assets/js/public.js"></script>	
 
 		<!-- page script -->
 		<script type="text/javascript">
@@ -38,22 +39,50 @@
 				var html = '';
 
 				html = html +
-				'<form>'+
+				'<form id="syncrom" f-group="operation" f-target="department">'+
 					'<div class="input-frame col-md-6">'+
 						'<h3><b>Department</b></h3>'+
 						'<div class="form-group">'+
 							'<label>Department Name</label>'+
-							'<input type="text" class="form-control">'+
+							'<input name="name" type="text" class="form-control">'+
+							'<input name="idData" type="hidden">'+
 						'</div>'+
 						'<div class="clearfix"></div>'+
 						'<div class="btn-group">'+
-							'<button class="btn btn-warning" type="button">Create</button>'+
+							'<button class="btn btn-warning" type="submit">Create</button>'+
 							'<button class="btn btn-warning" type="button">Cancel</button>'+
 						'</div>'+
 					'</div>' +
 				'</form>';
 
 				$('main.parent-admin .main-content').append(html);
+
+				/* data generator */
+				if(getParam('q') != "" && getParam('q') != null) dataGenerator(getParam('q'));
+				else p_formHandler('syncrom', 'addData', 'department.html');
+			}
+
+			function dataGenerator(idData){
+				var xData = p_getData('operation', 'departmentFetch', '', "idData=" + idData);
+					xData = xData.feedData;
+
+				for (var key in xData) {
+					if($("[name='" + key + "']").attr('type') != "file") $("[name=" + key + "]").val(xData[key]);
+					else{ 
+						var temp = xData[key].split(","); console.log(temp);
+						if(Array.isArray(temp) == false){
+							if(xData[key]!="") $("[name-tag=" + key + "]").attr('src', '../assets/department/' + xData[key]);
+							else $("[name-tag='" + key + "']").attr('src', '../assets/default/department.gif');
+						}else{
+							for(var loop=0; loop<temp.length; loop++){
+								if(xData[key]!="") $("[name-tag='" + key + loop +"']").attr('src', '../assets/department/' + temp[loop]);
+								else $("[name-tag='" + key + loop +"']").attr('src', '../assets/default/department.gif');
+							}
+						}
+					}
+				}
+
+				p_formHandler('syncrom', 'updateData', 'department.html');
 			}
 		</script>
 	</body>
