--- a/admin/formProduct.html
+++ b/admin/formProduct.html
@@ -100,15 +100,27 @@
 						'<img id="preview" name-tag="picture" class="medium-image" src="../assets/default/product.gif">'+
 					'</div>'+
 					'<div class="form-group">'+
-						'<input name="picture" preview-id="preview" id="input-id" type="file" class="file form-control" data-preview-file-type="text">'+
+						'<input name="picture" preview-id="preview" accept="image/x-png,image/gif,image/jpeg" id="input-id" type="file" class="file form-control" data-preview-file-type="text">'+
 					'</div>' +
-					'<hr/>';
+					'<hr/>' +
+
+					'<div class="color-choice border">'+
+						'<ul>';
+
+					//color
+					for(var loop=0; loop<6; loop++){
+						html = html + '<li><img id="preview' + loop + '" name-tag="pattern[]' + loop + '" class="big-image" src="../assets/default/pattern.gif"/></li>';
+					}
+
+					html = html +
+						'</ul>'+
+					'</div>';
 
 					for(var loop=0; loop<6; loop++){
 						html = html +
 						'<div class="form-group">'+
 							'<label>Pattern #' + (loop + 1) + '</label>'+
-							'<input name="pattern[]" id="input-id' + loop + '" type="file" class="file form-control" data-preview-file-type="text">'+
+							'<input name="pattern[]" preview-id="preview' + loop + '" id="input-id' + loop + '" accept="image/x-png,image/gif,image/jpeg" type="file" class="file form-control" data-preview-file-type="text">'+
 						'</div>';
 					}
 
@@ -123,7 +135,7 @@
 
 				numberOnlyActivator('[name="qty"]');
 				currencyFormatActivator('[name="price"]');
-				imagePreviewActivator('[name="picture"]');
+				imagePreviewActivator('[name="picture"], [name="pattern[]"]');
 			}
 			
 			function dataGenerator(idData){
@@ -131,8 +143,19 @@
 					xData = xData.feedData;
 
 				for (var key in xData) {
-					if($("[name=" + key + "]").attr('type') != "file") $("[name=" + key + "]").val(xData[key]);
-					else $("[name-tag=" + key + "]").attr('src', '../assets/products/' + xData[key]);
+					if($("[name='" + key + "']").attr('type') != "file") $("[name=" + key + "]").val(xData[key]);
+					else{ 
+						var temp = xData[key].split(","); console.log(temp);
+						if(Array.isArray(temp) == false){
+							if(xData[key]!="") $("[name-tag=" + key + "]").attr('src', '../assets/products/' + xData[key]);
+							else $("[name-tag='" + key + "']").attr('src', '../assets/default/product.gif');
+						}else{
+							for(var loop=0; loop<temp.length; loop++){
+								if(xData[key]!="") $("[name-tag='" + key + loop +"']").attr('src', '../assets/patterns/' + temp[loop]);
+								else $("[name-tag='" + key + loop +"']").attr('src', '../assets/default/pattern.gif');
+							}
+						}
+					}
 				}
 
 				currencyFormatChanger('[name="price"]');
