--- a/admin/formChatter.html
+++ b/admin/formChatter.html
@@ -28,6 +28,7 @@
 		<script type="text/javascript" src="../assets/js/jquery-ui-1.10.0.custom.min.js"></script>
 		<script type="text/javascript" src="../assets/js/bootstrap.min.js"></script>	
 		<script type="text/javascript" src="../assets/js/syncard.js"></script>	
+		<script type="text/javascript" src="../assets/js/public.js"></script>	
 		<script type="text/javascript" src="../assets/js/nicEdit.js"></script>	
 
 		<!-- page script -->
@@ -39,24 +40,25 @@
 				var html = '';
 
 				html = html +
-				'<form>'+
+				'<form id="syncrom" f-group="operation" f-target="cms_chatter" enctype="multipart/form-data">'+
 					'<div class="input-frame col-md-6">'+
 						'<h3><b>Chatter</b></h3>'+
 						'<div class="form-group">'+
 							'<label>Title</label>'+
-							'<input type="text" class="form-control">'+
+							'<input name="title" type="text" class="form-control">'+
+							'<input name="idData" type="hidden">'+
 						'</div>'+
 						'<div class="form-group">'+
 							'<label>Description</label>'+
-							'<textarea class="form-control" rows="5" id="editor"></textarea>'+
+							'<textarea name="description" class="form-control" rows="5" id="editor"></textarea>'+
 						'</div>'+
 						'<div class="form-group">'+
 							'<label>Date</label>'+
-							'<input type="text" class="form-control">'+
+							'<input name="date" type="text" class="form-control">'+
 						'</div>'+
 						'<div class="clearfix"></div>'+
 						'<div class="btn-group">'+
-							'<button class="btn btn-warning" type="button">Create</button>'+
+							'<button class="btn btn-warning" type="submit">Create</button>'+
 							'<button class="btn btn-warning" type="button">Cancel</button>'+
 						'</div>'+
 					'</div>' +
@@ -65,10 +67,10 @@
 							'<label>Chatter Image</label>'+
 						'</div>'+
 						'<div class="form-group text-center">'+
-							'<img class="medium-image" src="../assets/default/chatter.gif">'+
+							'<img id="preview" name-tag="picture" class="medium-image" src="../assets/default/chatter.gif">'+
 						'</div>'+
 						'<div class="form-group">'+
-							'<input id="input-id" type="file" class="file form-control" data-preview-file-type="text">'+
+							'<input name="picture" preview-id="preview" accept="image/x-png,image/gif,image/jpeg" id="input-id" type="file" class="file form-control" data-preview-file-type="text">'+
 						'</div>' +
 					'</div>' +
 				'</form>';
@@ -77,7 +79,27 @@
 				$('main.parent-admin .main-content').append(html);
 
 				// //textarea editor
-				new nicEditor({iconsPath : '../assets/PICS/nicEditorIcons.gif'}).panelInstance('editor');
+				// new nicEditor({iconsPath : '../assets/PICS/nicEditorIcons.gif'}).panelInstance('editor');
+				/* data generator */
+				if(getParam('q') != "" && getParam('q') != null) dataGenerator(getParam('q'));
+				else p_formHandler('syncrom', 'addData', 'chatter.html');
+
+				imagePreviewActivator('[name="picture"]');
+			}
+
+			function dataGenerator(idData){
+				var xData = p_getData('operation', 'cms_chatterFetch', '', "idData=" + idData);
+					xData = xData.feedData;
+
+				for (var key in xData) {
+					if($("[name='" + key + "']").attr('type') != "file") $("[name=" + key + "]").val(xData[key]);
+					else{ 
+						if(xData[key]!="") $("[name-tag=" + key + "]").attr('src', '../assets/chatters/' + xData[key]);
+						else $("[name-tag='" + key + "']").attr('src', '../assets/default/chatters.gif');
+					}
+				}
+
+				p_formHandler('syncrom', 'updateData', 'chatter.html');
 			}
 		</script>
 	</body>
