--- a/admin/setting.html
+++ b/admin/setting.html
@@ -28,25 +28,15 @@
 		<script type="text/javascript" src="../assets/js/jquery-ui-1.10.0.custom.min.js"></script>
 		<script type="text/javascript" src="../assets/js/bootstrap.min.js"></script>	
 		<script type="text/javascript" src="../assets/js/syncard.js"></script>	
+		<script type="text/javascript" src="../assets/js/public.js"></script>	
 
 		<!-- page script -->
 		<script type="text/javascript">
 			$(function(){
-				customer();
+				loadData();
 			});
-			function customer(){
+			function loadData(){
 				var html = '';
-
-				var data = 
-				{
-					list : [
-						{ userId: "1", avatar: "pattern3.jpg", name: "Administrator", username: "admin@tulisan.com", type: "admin", departement: "Product" },
-						{ userId: "2", avatar: "pattern2.jpg", name: "Achdiyati Sumi", username: "ach@gmail.com", type: "customer", departement: "" },
-					],
-
-					admin : '1',
-					customer : '1',
-				};
 
 				html = html +
 				'<div class="header-option">' +
@@ -56,15 +46,15 @@
 								'<a href="formUser.html"><i class="fa fa-plus-circle text-warning">&nbsp;</i> Create User</a>'+
 							'</div>' +
 							'<div class="input-group operation-button">' +
-								'<a href="#"><i class="fa fa-minus-circle text-warning">&nbsp;</i> Delete User</a>'+
+								'<a href="#" id="deleteButton"><i class="fa fa-minus-circle text-warning">&nbsp;</i> Delete User</a>'+
 							'</div>' +
 							'<div class="input-group operation-button">' +
-								'<a href="#"><i class="fa fa-bars text-warning">&nbsp;</i> Manage User</a>'+
+								'<a href="#" id="manageButton"><i class="fa fa-bars text-warning">&nbsp;</i> Manage User</a>'+
 							'</div>' +
-				        	'<div class="input-group pull-right search-box">' +
+				        	'<div class="input-group pull-right">' +
 				        		'<input type="text" class="form-control" placeholder="Search">' +
 					        	'<span class="input-group-btn">' +
-					        		'<button type="submit" class="btn btn-default">SEARCH</button>' +
+					        		'<button type="button" class="search btn btn-default">SEARCH</button>' +
 					        	'</span>' +
 				        	'</div>' +
 				   		'</form>' +
@@ -73,15 +63,15 @@
 					'<div class="summary-group">'+
 						'<div class="summary-text">'+
 							'<p>Total number of Users</p>'+
-							'<p class="number">' + data.list.length + '</p>'+
+							'<p class="number" id="totalRecord">0</p>'+
 						'</div>'+
 						'<div class="summary-text">'+
 							'<p>Admins</p>'+
-							'<p class="number">' + data.admin + '</p>'+
+							'<p class="number" id="totalAdmin">0</p>'+
 						'</div>'+
 						'<div class="summary-text">'+
 							'<p>Customers</p>'+
-							'<p class="number">' + data.customer + '</p>'+
+							'<p class="number" id="totalCustomer">0</p>'+
 						'</div>'+
 						'<div class="alpha">'+
 							'<ul>' +
@@ -121,7 +111,7 @@
 					'<table class="table table-striped table-responsive">'+
 					    '<thead>'+
 					    	'<tr>'+
-						    	'<th width="5%"><input type="checkbox" onclick="checkboxToggle(this, \'customerSelect\')" /><label for="selectRecord' + loop + '"></label></th>'+
+						    	'<th width="5%"><input type="checkbox" onclick="checkboxToggle(this, \'customerSelect\')" /><label for="selectRecord"></label></th>'+
 						    	'<th width="5%" class="text-center"><span class="fa fa-picture-o"></span></th>'+
 						    	'<th>Name</th>'+
 						        '<th>Username</th>'+
@@ -129,23 +119,7 @@
 						        '<th>Departement</th>'+
 					    	'</tr>'+
 					    '</thead>'+
-					    '<tbody>';
-
-		    	data = data.list;
-		    	for(var loop =0; loop<data.length; loop++){
-		    		html = html +
-		    		'<tr>'+
-		    			'<td><input type="checkbox" name="customerSelect" value="'+data[loop].userId+'" id="selectRecord' + loop + '"><label for="selectRecord' + loop + '"></label></td>'+
-		    			'<td class="text-center"><img class="img-product" src="../assets/PICS/' + data[loop].avatar + '"></td>'+
-		    			'<td>'+ data[loop].name +'</td>'+
-		    			'<td>'+ data[loop].username +'</td>'+
-		    			'<td>'+ data[loop].type +'</td>'+
-		    			'<td>'+ data[loop].departement +'</td>'+
-		    		'</tr>';
-		    	}
-
-				html = html +
-					    '</tbody>'+
+					    '<tbody></tbody>'+
 					'</table>'+
 				'</div>';
 
@@ -183,11 +157,125 @@
 					'</div>'+
 				'</div>';
 
-				// html = html + '</div>';
 				$('main.parent-admin .main-content').append(html);
+
+				r_setCookie('adminPageFilter', '1');
+				r_setCookie('adminAlphaFilter', '');
+				var page = (r_getCookie('adminPageFilter') != "" ? r_getCookie('adminPageFilter'): "1");
+				var data = p_getData('operation', 'user', page);
+					data = data.feedData;
+
+				dataGenerator(data);
+				
+				//filter
+				$('.alpha a').on("click", function(){
+					var page = (r_getCookie('adminPageFilter') != "" ? r_getCookie('adminPageFilter'): "1");
+					var data = p_getData('operation', 'user', page, '(title LIKE "' + $(this).html() + '%")');
+					data = data.feedData;
+					dataGenerator(data);
+
+					r_setCookie('adminPageFilter', page);
+					r_setCookie('adminAlphaFilter', $(this).html());
+				});
+
+				$('button.search').on("click", function(){
+					var keyword = $("[placeholder='Search']").val();
+					var data = p_getData('operation', 'user', '1', '(title LIKE "%' + keyword + '%")');
+					data = data.feedData;
+					dataGenerator(data);
+				});
+
+				//filter end
+
+				//paging
+				$('.pagging-text .pagging-right').on("click", function(){
+					var page = (r_getCookie('adminPageFilter') != "" ? r_getCookie('adminPageFilter'): "1");
+					page = parseInt(page) + 1;
+
+					var keyword = $("[placeholder='Search']").val();
+					var alpha = (r_getCookie('adminAlphaFilter') != "" ? '(title LIKE "' + r_getCookie('adminAlphaFilter') + '%") AND ': "");
+
+					var data = p_getData('operation', 'user', page, alpha + '(title LIKE "%' + keyword + '%")');
+					data = data.feedData;
+
+					if(data.length > 0){ dataGenerator(data); } else { page = parseInt(page) - 1; }
+
+					r_setCookie('adminPageFilter', page);
+				});
+
+				$('.pagging-text .pagging-left').on("click", function(){
+					var page = (r_getCookie('adminPageFilter') != "" ? r_getCookie('adminPageFilter'): "1");
+					if(page > 1){
+						page = parseInt(page) - 1;
+
+						var keyword = $("[placeholder='Search']").val();
+						var data = p_getData('operation', 'user', page, '(title LIKE "%' + keyword + '%")');
+						data = data.feedData;
+						dataGenerator(data);
+
+						r_setCookie('adminPageFilter', page);
+					}
+				});
+				//paging end
 			}
 			
-		
+			function dataGenerator(data){
+				var html = "";
+				var adminCounter = 0;
+				var customerCounter = 0;
+				for(var loop =0; loop<data.length; loop++){
+		    		html = html +
+		    		'<tr>'+
+		    			'<td><input type="checkbox" name="customerSelect" value="'+data[loop].idData+'" id="selectRecord' + loop + '"><label for="selectRecord' + loop + '"></label></td>'+
+		    			'<td class="text-center"><img class="img-product" src="../assets/users/' + data[loop].picture + '"></td>'+
+		    			'<td>'+ data[loop].name +'</td>'+
+		    			'<td>'+ data[loop].username +'</td>'+
+		    			'<td>'+ data[loop].type +'</td>'+
+		    			'<td>'+ data[loop].department +'</td>'+
+		    		'</tr>';
+
+		    		if(data[loop].type == "admin") adminCounter++;
+		    		if(data[loop].type == "customer") customerCounter++;
+		    	}
+
+				$('main.parent-admin table tbody').html('').append(html);
+				$('main.parent-admin #totalRecord').html(data.length);
+				$('main.parent-admin #totalAdmin').html(adminCounter);
+				$('main.parent-admin #totalCustomer').html(customerCounter);
+
+				//activator
+				checkboxActivator();
+				operationActivator();
+			}
+
+			function operationActivator(){
+				$('#deleteButton').unbind().on("click", function(){ 
+					if(checkedArray.length > 0){
+						var confirmation = confirm("Are you sure you want to delete the selected data?");
+						if (confirmation == true) {
+							p_removeData('operation', 'user', checkedArray);
+							
+							r_setCookie('adminPageFilter', '1');
+							r_setCookie('adminAlphaFilter', '');
+							var page = (r_getCookie('adminPageFilter') != "" ? r_getCookie('adminPageFilter'): "1");
+							var data = p_getData('operation', 'user', page);
+								data = data.feedData;
+
+							dataGenerator(data);
+						}
+					}else{
+						alert("Please choose record first!");
+					}
+				});
+
+				$('#manageButton').unbind().on("click", function(){ 
+					if(checkedArray.length == 1 && checkedArray[0] != "0"){
+						window.location.href = base_url + "/admin/formUser.html?q=" + checkedArray[0];
+					}else{
+						alert("Please choose only one record!");
+					}
+				});
+			}
 		</script>
 	</body>
 </html>
