--- a/admin/formVideo.html
+++ b/admin/formVideo.html
@@ -56,6 +56,9 @@
 							'<label>File</label>'+
 						'</div>'+
 						'<div class="form-group">'+
+							'<p><i name="fileName">&nbsp;</i></p>'+
+						'</div>' +
+						'<div class="form-group">'+
 							'<input name="video" id="input-id" type="file" class="file form-control" data-preview-file-type="text">'+
 						'</div>' +
 						'<div class="clearfix"></div>'+
@@ -86,10 +89,11 @@
 					xData = xData.feedData;
 
 				for (var key in xData) {
-					if(key != "description"){
+					if(key != "description" && key != "fileName"){
 						if($("[name='" + key + "']").attr('type') != "file") $("[name=" + key + "]").val(xData[key]);
 					}else{
-						$("[name=" + key + "]").val(Base64.decode(xData[key]));
+						if(key == "description") $("[name=" + key + "]").val(Base64.decode(xData[key]));
+						if(key == "fileName") $("[name=" + key + "]").html(xData[key]);
 					}
 				}
 
