--- a/admin/product.html
+++ b/admin/product.html
@@ -104,7 +104,7 @@
 					'<table class="table table-striped table-responsive">'+
 					    '<thead>'+
 					    	'<tr>'+
-						    	'<th width="5%"><input type="checkbox" id="selectRecord" value="0" onclick="checkboxToggle(this, \'customerSelect\')" /><label for="selectRecord"></label></th>'+
+						    	'<th width="5%"><input type="checkbox" name="customerSelect" id="selectRecord" value="0" onclick="checkboxToggle(this, \'customerSelect\')" /><label for="selectRecord"></label></th>'+
 						    	'<th width="5%" class="text-center"><i class="fa fa-picture-o"></i></th>'+
 						        '<th width="10%" class="text-center">SKU</th>'+
 						        '<th>Product Name</th>'+
@@ -220,15 +220,17 @@
 				for(var loop =0; loop<data.length; loop++){
 
 					data[loop].picture = (data[loop].picture != "") ? "../assets/products/" + data[loop].picture : "";
+					data[loop].price  = (data[loop].price != "") ? normalFormatChanger(data[loop].price) : "0";
+					
 		    		html = html +
 		    		'<tr>'+
-		    			'<td width="5%"><input type="checkbox" value="'+data[loop].idData+'" id="selectRecord' + loop + '"><label for="selectRecord' + loop + '"></label></td>'+
+		    			'<td width="5%"><input type="checkbox" name="customerSelect" value="'+data[loop].idData+'" id="selectRecord' + loop + '"><label for="selectRecord' + loop + '"></label></td>'+
 		    			'<td width="5%"><img class="img-product" src="'+ data[loop].picture +'"></td>'+
 		    			'<td class="text-center">'+ data[loop].sku +'</td>'+
 		    			'<td>'+ data[loop].name +'</td>'+
 		    			'<td>'+ data[loop].description +'</td>'+
 		    			'<td class="text-center">'+ data[loop].qty +'</td>'+
-		    			'<td class="text-right">'+ currencyFormat(data[loop].price) +'</td>'+
+		    			'<td class="text-right">'+ currencyFormat(String(data[loop].price)) +'</td>'+
 		    		'</tr>';
 		    	}
 
